# suitability-gate

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
core/: Dockerfile  pom.xml
core/src/main/resources/: application.properties  logback-spring.xml
core/src/main/resources/db/migration/: V1__init_decision_ledger.sql  V2__decision_explanations.sql  V3__decision_overrides.sql  V4__seed_demo_ledger.sql
docs/: WALKTHROUGH.md
explanation-service/: .dockerignore  Dockerfile  pyproject.toml
explanation-service/app/: __init__.py  canned_explanations.py  main.py  schemas.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  format.ts  index.css  main.tsx  motion.ts  theme.css
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthProvider.tsx  auth-context.ts  useAuth.ts
frontend/src/compliance/: RecordModal.tsx  RecordsTable.tsx  RuleBreakdownChart.tsx  VerdictDonut.tsx  chart-theme.ts  compliance-metrics.ts  useComplianceDashboard.ts
frontend/src/components/: AppShell.tsx  AttributeChip.tsx  GlowButton.tsx  PreviewCard.tsx  RiskometerGauge.tsx  RuleRow.tsx  SelectField.tsx  TextField.tsx  VerdictCard.tsx  icons.tsx
frontend/src/copilot/: queryEngine.ts  useLedgerRecords.ts
frontend/src/prospects/: useProspects.ts
frontend/src/screens/: ComplianceCopilot.tsx  ComplianceDashboard.tsx  CustomerDashboard.tsx  LoginScreen.tsx  RmProspects.tsx  RmWorkbench.tsx
ruleset/: ruleset-2026.07.1.yaml
scripts/: _common.sh  launch.sh  launch_docker.sh
(+92 files in other folders)
